force-app/main/default/objects/Incident_Setup__c/Incident_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global kill-switch for Outage Management automated notifications</description>
    <label>Incident Setup</label>
</CustomObject>