force-app/main/default/objects/Incident_Setup__c/fields/Incident_Notifs_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notifs_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Global kill-switch for Outage Management automated notifications</description>
    <label>Global Incident Notifications Disabled</label>
    <type>Checkbox</type>
</CustomField>