force-app/main/default/objects/Incident_Setup__c/fields/Incident_Notifs_Last_Set_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notifs_Last_Set_By_Id__c</fullName>
    <label>Incident Notifications Last Set By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>