force-app/main/default/objects/Incident_Setup__c/fields/Incident_Notifs_Last_Set_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notifs_Last_Set_Time__c</fullName>
    <label>Incident Notifications Last Set Time</label>
    <type>DateTime</type>
</CustomField>