force-app/main/default/objects/Incident_Setup__c/fields/Multi_Incident_Mode_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Multi_Incident_Mode_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable switch for Multi-Incident Mode</description>
    <label>Multi-Incident Mode Disabled</label>
    <type>Checkbox</type>
</CustomField>